--- a/Argment/Screens/Game/Stats/Stats.storyboard
+++ b/Argment/Screens/Game/Stats/Stats.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -14,13 +15,34 @@
                     <view key="view" contentMode="scaleToFill" id="t4Y-7v-pUD">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="r7A-GY-Rja">
+                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
+                                <color key="backgroundColor" name="Background"/>
+                                <inset key="scrollIndicatorInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="300"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="r7A-GY-Rja" firstAttribute="top" secondItem="idR-SN-JbM" secondAttribute="top" id="B1Q-1N-Yet"/>
+                            <constraint firstItem="idR-SN-JbM" firstAttribute="trailing" secondItem="r7A-GY-Rja" secondAttribute="trailing" id="IGk-8v-KaY"/>
+                            <constraint firstItem="r7A-GY-Rja" firstAttribute="leading" secondItem="idR-SN-JbM" secondAttribute="leading" id="OLc-kC-Cwx"/>
+                            <constraint firstAttribute="bottom" secondItem="r7A-GY-Rja" secondAttribute="bottom" id="SB8-XX-svS"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="idR-SN-JbM"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="r7A-GY-Rja" id="fzM-dr-RJb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yIz-Mp-Cg2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-55" y="-144"/>
         </scene>
     </scenes>
+    <resources>
+        <namedColor name="Background">
+            <color red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
